# tmdl

./: .gitignore  Cargo.toml  README.md
scripts/: danbooru.rhai  e-hentai.lua  nhentai.lua  tmdl.rhai
scripts/danbooru/: config.toml
scripts/sites/danbooru/: config.toml  danbooru.lua
scripts/sites/e-hentai/: e-hentai.lua
scripts/sites/nhentai/: nhentai.lua
src/: main.rs  metadata.rs
